<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDreamNote"
    android:background="@drawable/bg_color_blue_white_degraded">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout_new_dream"
        />

    <RelativeLayout
        android:id="@+id/relative_layout_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="5dp"
        android:padding="5dp">



        <EditText
            android:id="@+id/field_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:textStyle="bold"
            android:hint="@string/hint_date_new_dream"
            android:background="@drawable/border_date_field_new_dream"
            android:layout_toStartOf="@+id/button_save_dream"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="100dp"
            android:autofillHints="no"
            android:onClick="showDatePickerDialog"
            android:focusable="false"
            />

        <Button
            android:id="@+id/button_save_dream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save_dream"
            android:textStyle="bold"
            android:background="@drawable/border_button_save_dream"
            android:layout_alignParentEnd="true"
            android:elevation="2dp"
            />


        <EditText
            android:id="@+id/field_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textStyle="bold"
            android:hint="@string/hint_tittle_new_dream"
            android:background="@drawable/border_tittle_field_new_dream"
            android:layout_below="@+id/field_date"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_dream_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout_tittle"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:padding="5dp"
        >

        <ScrollView
            android:id="@+id/scroll_dream_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_dream_text_scroll_new_dream"
            android:padding="4dp">

            <EditText
                android:id="@+id/field_dream_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@android:color/black"
                android:padding="4dp"
                android:textSize="18sp"
                android:hint="@string/hint_dream_text_new_dream"
                />


        </ScrollView>

    </RelativeLayout>


</RelativeLayout>